fix: amazon radial gradient now visible inline

--- a/quartz/styles/admonitions.scss
+++ b/quartz/styles/admonitions.scss
@@ -272,7 +272,7 @@
     }
 
     & * {
-      color: inherit;
+      color: inherit !important;
     }
 
     & .small-caps,
